<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="about_label">About</string>
    <string name="about_online_user_guide_label">Online User Guide</string>
    <string name="about_online_user_guide_label_link">&lt;a href=http://www.cisco.com/c/en/us/td/docs/security/vpn_client/anyconnect/anyconnect40/user/guide/b_Android_AnyConnect_User_Guide_4-0-x.html></string>
    <string name="about_version_label">Version</string>
    <string name="action_refresh">Refresh</string>
    <string name="add_a_connection">Add a connection</string>
    <string name="add_vpn">Add New VPN Connection</string>
    <string name="additional_information">Additional Information</string>
    <string name="address_info_header">Address Information</string>
    <string name="admin_cert_delete_failed">Unable to delete certificate(s) provided by an administrator</string>
    <string name="advanced_connection_editor_help_certificate_auth_description">By default, the client uses the proprietary AnyConnect EAP authentication method. User also has the option to choose standards-based EAP authentication method.</string>
    <string name="advanced_connection_editor_help_certificate_auth_header">Authentication</string>
    <string name="advanced_connection_editor_help_certificate_connect_ipsec_description">Specifies the protocol (SSL/IPsec) for connecting to the ASA. The default is SSL.</string>
    <string name="advanced_connection_editor_help_certificate_connect_ipsec_header">Connect with IPsec</string>
    <string name="advanced_connection_editor_help_certificate_header">Certificate</string>
    <string name="advanced_connection_editor_help_certificate_ike_id_description">If you choose a standards-based EAP authentication method, please enter the client identity.</string>
    <string name="advanced_connection_editor_help_certificate_ike_id_header">IKE Identity</string>
    <string name="advanced_connection_editor_help_certificate_item_auto_descriptiono">automatically select a certificate for authentication.</string>
    <string name="advanced_connection_editor_help_certificate_item_auto_header">Automatic</string>
    <string name="advanced_connection_editor_help_certificate_item_disable_descriptiono">Do not use certificate authentication.</string>
    <string name="advanced_connection_editor_help_certificate_item_disable_header">Disabled</string>
    <string name="advanced_connection_editor_help_certificate_item_select_descriptiono">specify a certificate to use when connecting to a tunnel group that requires a certificate.</string>
    <string name="advanced_connection_editor_help_certificate_item_select_header">Select a specific certificate</string>
    <string name="advanced_connection_editor_help_certificate_top">Offers 3 different options for using certificate authentication:</string>
    <string name="advanced_connection_label">Advanced Preferences</string>
    <string name="advanced_connection_summary">Change advanced certificate and protocol settings</string>
    <string name="advanced_settings_footer">Please modify Advanced Settings only when instructed by your system administrator.</string>
    <string name="advanced_settings_header">Advanced Settings</string>
    <string name="all_route_tables_info_header">All Route Tables</string>
    <string name="allowed_apps_header">Allowed Apps</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="anyconnect_uri_parse_failed">The AnyConnect URI could not be parsed.</string>
    <string name="app_name">Cisco Secure Client CSP</string>
    <string name="app_name_legacy">AnyConnect</string>
    <string name="app_rule_header">Tunneled Apps</string>
    <string name="app_rules">App Rules</string>
    <string name="app_rules_description">View Per-App VPN Rules</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="attempting_to_connect">AnyConnect is currently initializing, please try again.</string>
    <string name="aup_text">Please click here to view Cisco Secure Client CSP Network Visibility Module terms of use.</string>
    <string name="banner_accept_button">Accept</string>
    <string name="banner_details_button">Details</string>
    <string name="banner_title">Please Respond to Banner</string>
    <string name="barcode_scan_default_text">Scanning...</string>
    <string name="blocked_apps_header">Blocked Apps</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="btn_done">Done</string>
    <string name="btn_import">Import</string>
    <string name="bytes_info_header">Bytes</string>
    <string name="bytes_received">Bytes Received</string>
    <string name="bytes_sent">Bytes Sent</string>
    <string name="cancel">Cancel</string>
    <string name="cannot_modify_mdm_imported">This connection has been imported by MDM. Not all fields can be edited.</string>
    <string name="cannot_modify_profile_imported_connections">This connection has been imported from an AnyConnect VPN Profile. Not all fields can be edited.</string>
    <string name="cert_auth_mode_automatic">Automatic</string>
    <string name="cert_auth_mode_disabled">Disabled</string>
    <string name="cert_auth_mode_manual">Manual</string>
    <string name="cert_cn_label">Common Name</string>
    <string name="cert_country_label">Country</string>
    <string name="cert_critical">Critical</string>
    <string name="cert_delete_all_dialog_confirm">Are you sure you want to delete all Cisco Secure Client CSP certificates? This cannot be undone.</string>
    <string name="cert_delete_dialog_confirm">Are you sure you want to delete \"%1$s\"? This cannot be undone.</string>
    <string name="cert_delete_dialog_keychain_confirm">"Are you sure you want to delete \"%1$s\"? This will remove Cisco Secure Client CSP's reference to the system certificate, but will not delete the certificate from the system."</string>
    <string name="cert_delete_dialog_title">Delete?</string>
    <string name="certificate_label">Certificate</string>
    <string name="cisco_secure_client_label">Cisco Secure Client CSP</string>
    <string name="click_to_launch_component">Click a component to launch the Application associated with it.</string>
    <string name="connection_hostname_label">Server Address</string>
    <string name="connection_ike_identity_label">IKE Identity</string>
    <string name="connection_info_header">Connection Information</string>
    <string name="connection_name_label">Description</string>
    <string name="continue_send">Continue</string>
    <string name="control_frames_info_header">Control Frames</string>
    <string name="customize_debug_logs_android_ani">ANI</string>
    <string name="customize_debug_logs_android_managed_config">Managed Configurations</string>
    <string name="customize_debug_logs_preference_component_label_vpn_ipsec_ikev2">IKEv2</string>
    <string name="customize_debug_logs_preference_component_summary_vpn_ipsec_ikev2">Enable protocol level logs for IKEv2 exchanges</string>
    <string name="customize_debug_logs_umbrella_config">Umbrella</string>
    <string name="customize_debug_logs_vpn_dtls_mtu">MTU DPD Exchanges</string>
    <string name="customize_debug_logs_vpn_network_env">Network Env</string>
    <string name="customize_debug_logs_vpn_pbr">PBR</string>
    <string name="customize_debug_logs_vpn_saml">SAML</string>
    <string name="customize_debug_logs_vpn_state">State</string>
    <string name="customize_debug_logs_vpn_strap">STRAP</string>
    <string name="feature_info_header">Feature Configuration</string>
    <string name="frames_info_header">Frames</string>
    <string name="installed_components">Installed Components:</string>
    <string name="no_installed_components">No Components installed</string>
    <string name="non_secure_routes_info_header">Non-Secured Routes</string>
    <string name="not_set">Not Set</string>
    <string name="not_set_optional">Not Set (Optional)</string>
    <string name="preference_debug_mode">Debug Mode</string>
    <string name="preference_description_block_untrusted_servers">Do not allow connections to servers with untrusted certificates.</string>
    <string name="preference_description_debug_mode">Run Cisco Secure Client CSP in debug mode</string>
    <string name="preference_description_disable_pac_proxy">Do not apply PAC URL browser proxy when VPN is established.</string>
    <string name="preference_description_fips">Enable Federal Information Processing Standard for VPN</string>
    <string name="preference_description_ocsp">Enable certificate revocation checking for VPN</string>
    <string name="preference_description_strict_mode">Enable strict certificate trust checking for VPN</string>
    <string name="preference_disable_pac_proxy">Disable PAC URL Proxy</string>
    <string name="preference_fips">VPN FIPS Mode</string>
    <string name="preference_label_authentication">Authentication</string>
    <string name="preference_label_block_untrusted_servers">Block Untrusted Servers</string>
    <string name="preference_label_connect_with_ipsec">Connect with IPsec</string>
    <string name="preference_label_remote_control">External Control</string>
    <string name="preference_ocsp">OCSP Revocation</string>
    <string name="preference_strict_mode">Strict Certificate Trust</string>
    <string name="preference_summary_connect_with_ipsec">Connections will use IPsec instead of SSL. Information about IPsec parameters can be found in the menu under \"Additional Information\".</string>
    <string name="secure_routes_info_header">Secured Routes</string>
    <string name="time_of_occurrence">Time of Occurrence</string>
    <string name="transport_info_header">Transport Information</string>
    <string name="user_desc_email_log_header">Please describe the problem and steps to reproduce:</string>
    <string name="user_desc_email_log_problem_label">Problem</string>
    <string name="user_desc_email_log_steps_label">Steps to Reproduce</string>
</resources>