<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/default_style_list_view"
      xmlns:android="http://schemas.android.com/apk/res/android">
        <com.cisco.anyconnect.vpn.android.ui.preferences.AnyConnectCheckboxPreference android:gravity="center_vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="?android:listPreferredItemHeight" android:title="@string/customize_debug_logs_preference_component_label_vpn_ipsec_ikev2" android:key="vpn_ipsec_ikev2" android:summary="@string/customize_debug_logs_preference_component_summary_vpn_ipsec_ikev2" android:defaultValue="false" />
        <com.cisco.anyconnect.vpn.android.ui.preferences.AnyConnectCheckboxPreference android:gravity="center_vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="?android:listPreferredItemHeight" android:title="@string/customize_debug_logs_android_managed_config" android:key="android_managed_config" android:defaultValue="false" />
        <com.cisco.anyconnect.vpn.android.ui.preferences.AnyConnectCheckboxPreference android:gravity="center_vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="?android:listPreferredItemHeight" android:title="@string/customize_debug_logs_android_ani" android:key="vpn_android_ani" android:defaultValue="false" />
        <com.cisco.anyconnect.vpn.android.ui.preferences.AnyConnectCheckboxPreference android:gravity="center_vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="?android:listPreferredItemHeight" android:title="@string/customize_debug_logs_vpn_pbr" android:key="vpn_pbr" android:defaultValue="false" />
        <com.cisco.anyconnect.vpn.android.ui.preferences.AnyConnectCheckboxPreference android:gravity="center_vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="?android:listPreferredItemHeight" android:title="@string/customize_debug_logs_umbrella_config" android:key="umbrella_config" android:defaultValue="false" />
        <com.cisco.anyconnect.vpn.android.ui.preferences.AnyConnectCheckboxPreference android:gravity="center_vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="?android:listPreferredItemHeight" android:title="@string/customize_debug_logs_vpn_strap" android:key="vpn_strap" android:defaultValue="false" />
        <com.cisco.anyconnect.vpn.android.ui.preferences.AnyConnectCheckboxPreference android:gravity="center_vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="?android:listPreferredItemHeight" android:title="@string/customize_debug_logs_vpn_network_env" android:key="vpn_network_env" android:defaultValue="false" />
        <com.cisco.anyconnect.vpn.android.ui.preferences.AnyConnectCheckboxPreference android:gravity="center_vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="?android:listPreferredItemHeight" android:title="@string/customize_debug_logs_vpn_dtls_mtu" android:key="vpn_dtls_mtu" android:defaultValue="false" />
        <com.cisco.anyconnect.vpn.android.ui.preferences.AnyConnectCheckboxPreference android:gravity="center_vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="?android:listPreferredItemHeight" android:title="@string/customize_debug_logs_vpn_saml" android:key="vpn_saml" android:defaultValue="false" />
        <com.cisco.anyconnect.vpn.android.ui.preferences.AnyConnectCheckboxPreference android:gravity="center_vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="?android:listPreferredItemHeight" android:title="@string/customize_debug_logs_vpn_state" android:key="vpn_state" android:defaultValue="false" />
        <include layout="@layout/list_divider" />
    </LinearLayout>
</LinearLayout>