<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:paddingTop="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/ic_any_connect_secure_mobility_client" />
    <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/cisco_secure_client_label" style="@style/default_style_application_title" />
    <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/installed_components" style="@style/default_style_header_bar" />
    <TextView android:id="@id/click_to_launch_component_tooltip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/click_to_launch_component" style="@style/default_style_header_subtext" />
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <ListView android:id="@android:id/list" android:layout_width="fill_parent" android:layout_height="wrap_content" android:cacheColorHint="#00000000" android:divider="#00000000" style="@style/default_style_list_view" />
        <TextView android:id="@android:id/empty" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/no_installed_components" style="@style/default_style_content_empty" />
    </LinearLayout>
</LinearLayout>